cmake_minimum_required(VERSION 3.13)

target_include_directories(arcade PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(arcade_menu_main PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(arcade_nibbler PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(arcade_snake PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(arcade_ncurses PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(arcade_sdl2 PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(arcade_sfml PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(Arcade)
add_subdirectory(MiniAudioWrapper)
add_subdirectory(GameLibs)
add_subdirectory(GraphicLibs)
add_subdirectory(MainMenus)
add_subdirectory(SaveScore)
